--- a/transform/templates/transform/index.html
+++ b/transform/templates/transform/index.html
@@ -46,7 +46,7 @@
     
     <div class="container">
       <div class="page-header">
-        <h1>SurvGR  <small>μετασχηματισμός συντεταγμένων</small></h1>
+        <h1>jojo<small>μτσχ</small></h1>
       </div>
 
       {% regroup ref_systems|dictsortreversed:"datum" by datum as datums %}
@@ -56,7 +56,7 @@
           <div class="col-sm-6">
             <div class="panel panel-primary panel-transform-from">
               <div class="panel-heading">
-                <h1 class="panel-title">Μετασχηματισμός Από:</h1>
+                <h1 class="panel-title">Από:</h1>
               </div>
               <div class="panel-body">
                 <!--From Reference system selection -->
@@ -198,10 +198,7 @@
           <li> <strong>GeoJSON</strong> - Κάνει δυνατή την μετατροπή σημείων, γραμμών, πολυγώνων και GIS features.  Για περισσότερες πληροφορίες: <a href="http://geojson.org/">geojson.org</a></li>
         </ul>
       </p>
-      <h3> Υποστήριξη και ανοιχτός κώδικας </h3>
-      <p> Μπορείτε να δείτε και να συμμετάσχετε στον open source κώδικα της εφαρμογής με την επίσκεψή σας στην παρακάτω <a href="https://github.com/georgeouzou/survgr"> διεύθυνση</a>. Επίσης, τυχόν σφάλματα και προτροπές για αναβάθμιση της εφαρμογής μπορούν να αναφερθούν <a href="https://github.com/georgeouzou/survgr/issues">εδώ</a>.</p>
-      <hr>
-    </div> <!--container-->
+      </div> <!--container-->
 
     <script type="text/javascript">
       var HATTBLOCK_FEATURES_URL = "{% static 'transform/assets/hattblocks.min.geojson' %}";
