--- a/transform/templates/transform/index.html
+++ b/transform/templates/transform/index.html
@@ -132,7 +132,7 @@
           <div class="col-sm-6">
             <div class="panel panel-primary panel-transform-to">
               <div class="panel-heading">
-                <h1 class="panel-title">Μετασχηματισμός Πρός:</h1>
+                <h1 class="panel-title">Πρός:</h1>
               </div>
               <div class="panel-body">
                 <!--To Reference system selection -->
@@ -189,14 +189,6 @@
           <li>ED50 / UTM </li> 
         </ul>
       Η εφαρμογή δεν εφαρμόζει προσεγγιστικούς υπολογισμούς. Για τους μετασχηματισμούς πρός και από το Παλαιό Ελληνικό Datum (προβολές HATT, TM3) χρησιμοποιούνται οι πολυωνυμικοί συντελεστές που διατίθενται από τον <a href="http://www.okxe.gr/el/">OKXE</a> και γίνεται ενδιάμεσος μετασχηματισμός στο ΕΓΣΑ87. Παρομοίως, για τους μετασχηματισμούς από και πρός το HTRS07 χρησιμοποιούνται τα διορθωτικά grids του <a href="http://www.hepos.gr/">Hepos</a>.
-      </p>
-      <h3> Τι δεδομένα υποστηρίζει </h3>
-      <p>
-        Με ένα απλό copy-paste από το αρχείο σας εισάγετε και μετασχηματίστε τα δεδομένα σας.
-        <ul>
-          <li> <strong>CSV</strong>  - Αυτός ο τύπος δίνει την δυνατότητα μετασχηματισμού σημείων. Το κάθε σημείο αναγράφεται σε ξεχωριστή γραμμή. Οι συντεταγμένες του κάθε σημείου είναι διαχωρισμένες με κόμμα/κενό/tab/ερωτηματικό. Μονάδα μέτρησης είναι τα μέτρα για τις προβολικές συντεταγμένες Ε, Ν και τα υψόμετρα h, ενώ οι δεκαδικές μοίρες για τις γεωδαιτικές.</li>
-          <li> <strong>GeoJSON</strong> - Κάνει δυνατή την μετατροπή σημείων, γραμμών, πολυγώνων και GIS features.  Για περισσότερες πληροφορίες: <a href="http://geojson.org/">geojson.org</a></li>
-        </ul>
       </p>
       </div> <!--container-->
 
