--- a/transform/templates/transform/index.html
+++ b/transform/templates/transform/index.html
@@ -87,8 +87,8 @@
                 </div>
                 <!--input data-->
                 <div class="form-group">
-                  <label for="input-area" class="form-control-label">Εισαγωγή δεδομένων:</label>
-                  <textarea id="input-area" class="form-control" rows="10"></textarea>
+                  <label for="input-area" class="form-control-label">Δώσε data εδώ:</label>
+                  <textarea id="input-area" class="form-control" rows="5"></textarea>
                 </div>
                 <!-- input data options-->
                 <div class="row form-group"> 
@@ -123,7 +123,7 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <button id="go" class="btn btn-primary">Μετασχημάτισε</button>
+                  <button id="go" class="btn btn-primary">Πάτα το γλέντι!!!</button>
                 </div>
               </div>
             </div> <!--panel from-->      
@@ -165,7 +165,7 @@
                 <!--output data-->
                 <div class="form-group">
                   <label for="output-area" class="form-control-label">Αποτελέσματα:</label>
-                  <textarea id="output-area" class="form-control" rows="10"></textarea>
+                  <textarea id="output-area" class="form-control" rows="5"></textarea>
                 </div>
                 <div id="output-alert-area" class="form-group">
                   <!--generate alert based on the results-->
@@ -179,7 +179,6 @@
 
       <hr>
       <!-- info -->
-      <h3> Τι είναι το SurvGR </h3>
       <p> To SurvGR είναι ένα web service για την εύκολη και μαζική μετατροπή συντεταγμένων σημείων αλλά και GIS features μεταξύ των διαφόρων συστημάτων αναφοράς που χρησιμοποιούνται στην Ελλάδα:
         <ul>
           <li>ΕΓΣΑ87 / TM87</li>
