--- a/transform/templates/transform/index.html
+++ b/transform/templates/transform/index.html
@@ -46,7 +46,7 @@
     
     <div class="container">
       <div class="page-header">
-        <h1>jojo<small>μτσχ 20200119-19.00</small></h1>
+        <h1>jojo<small>μτσχ 20200119-19.05</small></h1>
       </div>
 
       {% regroup ref_systems|dictsortreversed:"datum" by datum as datums %}
@@ -169,16 +169,22 @@
                 </div>
                 <div id="output-alert-area" class="form-group">
                     
-                    <div id="output-alert-area" class="form-group"><!--new line jojo-->
+                    <div id="output-alert-area" class="form-group"><!--new line jojo--></div>
                     
                   <!--generate alert based on the results-->
                 </div>
+                jojo1
               </div>
+              jojo2
             </div>  <!--panel to-->
+            jojo3
           </div>
+        jojo4
         </div> <!--row-->
+      jojo5
 
       </form>
+    jojo6
 
       <hr>
       <!-- info -->
