--- a/transform/templates/transform/index.html
+++ b/transform/templates/transform/index.html
@@ -46,7 +46,7 @@
     
     <div class="container">
       <div class="page-header">
-        <h1>jojo<small>μτσχ 20200119-19.05</small></h1>
+        <h1>jojo<small>μτσχ 20200119-19.10</small></h1>
       </div>
 
       {% regroup ref_systems|dictsortreversed:"datum" by datum as datums %}
@@ -163,29 +163,34 @@
                 </div>
 
                 <!--output data-->
-                <div class="form-group">
-                  <label for="output-area" class="form-control-label">Αποτελέσματα:</label>
-                  <textarea id="output-area" class="form-control" rows="5"></textarea>
-                </div>
-                <div id="output-alert-area" class="form-group">
-                    
-                    <div id="output-alert-area" class="form-group"><!--new line jojo--></div>
+                <div class="form-group">jojo1
+                  <label for="output-area" class="form-control-label">Αποτελέσματα:</label>jojo2
+                  <textarea id="output-area" class="form-control" rows="5"></textarea>jojo3
+                </div>jojo4
+                <div id="output-alert-area" class="form-group">jojo5
                     
                   <!--generate alert based on the results-->
                 </div>
-                jojo1
               </div>
-              jojo2
             </div>  <!--panel to-->
-            jojo3
+            jojo11
+
+            
+            
+            
+            jojo12
           </div>
-        jojo4
         </div> <!--row-->
-      jojo5
 
       </form>
-    jojo6
 
+    
+    
+    
+    
+    
+    
+    
       <hr>
       <!-- info -->
       <p>Υποστηριζόμενα Συστήματα Αναφοράς:
