--- a/transform/templates/transform/index.html
+++ b/transform/templates/transform/index.html
@@ -46,7 +46,7 @@
     
     <div class="container">
       <div class="page-header">
-        <h1>jojo<small>μτσχ 20200119-19.10</small></h1>
+        <h1>jojo<small>μτσχ 20200119-19.20</small></h1>
       </div>
 
       {% regroup ref_systems|dictsortreversed:"datum" by datum as datums %}
@@ -174,11 +174,11 @@
               </div>
             </div>  <!--panel to-->
             jojo11
-
+            <textarea id="output-area" class="form-control" rows="2"></textarea> <!--jojo12 new line-->
             
             
             
-            jojo12
+            jojo20
           </div>
         </div> <!--row-->
 
