--- a/transform/templates/transform/index.html
+++ b/transform/templates/transform/index.html
@@ -46,7 +46,7 @@
     
     <div class="container">
       <div class="page-header">
-        <h1>jojo<small>μτσχ 20200119-19.25</small></h1>
+        <h1>jojo<small>μτσχ 20200119-19.35</small></h1>
       </div>
 
       {% regroup ref_systems|dictsortreversed:"datum" by datum as datums %}
@@ -165,24 +165,15 @@
                 <!--output data-->
                 <div class="form-group">jojo1
                   <label for="output-area" class="form-control-label">Αποτελέσματα:</label>jojo2
-                  <textarea id="output-area" class="form-control" rows="5"></textarea>jojo3
-                </div>jojo4
-                <div id="output-alert-area" class="form-group">jojo5
+jojo3             <textarea id="output-area" class="form-control" rows="5"></textarea>jojo3
+jojo4             <textarea id="output-area" class="form-control" rows="2"></textarea>jojo5 <!--jojo4 new line-->
+                </div>jojo6
+                <div id="output-alert-area" class="form-group">jojo7
                     
                   <!--generate alert based on the results-->
                 </div>
               </div>
             </div>  <!--panel to-->
-            jojo11
-            <div class="form-group">                                                    <!--jojo12 new line-->
-            <label for="output-area" class="form-control-label">Αποτελέσματα:</label>   <!--jojo13 new line-->
-            <textarea id="output-area" class="form-control" rows="2"></textarea>        <!--jojo14 new line-->
-            </div>jojo15                                                                <!--jojo15 new line-->
-            <div id="output-alert-area" class="form-group">jojo16                       <!--jojo16 new line-->
-            
-            
-            
-            jojo20
           </div>
         </div> <!--row-->
 
