--- a/transform/templates/transform/index.html
+++ b/transform/templates/transform/index.html
@@ -46,7 +46,7 @@
     
     <div class="container">
       <div class="page-header">
-        <h1>jojo<small>μτσχ 20200119-19.45</small></h1>
+        <h1>jojo<small>μτσχ 20200119-19.50</small></h1>
       </div>
 
       {% regroup ref_systems|dictsortreversed:"datum" by datum as datums %}
@@ -166,7 +166,7 @@
                   <div class="form-group">
                     <label for="output-area" class="form-control-label">Αποτελέσματα:</label>
                     εδώ:<textarea id="output-area" class="form-control" rows="5"></textarea>
-                    <a href="https://www.google.gr/maps/@40.151,23.349,100m/data=!3m1!1e3">Google maps</a>
+                    <a href="https://www.google.gr/maps/@40.151,23.349,100m/data=!3m1!1e3"></a>
                   </div>
                 <div id="output-alert-area" class="form-group">
                 <!--generate alert based on the results-->
