--- a/transform/templates/transform/index.html
+++ b/transform/templates/transform/index.html
@@ -46,7 +46,7 @@
     
     <div class="container">
       <div class="page-header">
-        <h1>jojo<small>μτσχ 20200119-19.50</small></h1>
+        <h1>jojo<small>μτσχ 20200119-19.55</small></h1>
       </div>
 
       {% regroup ref_systems|dictsortreversed:"datum" by datum as datums %}
@@ -123,7 +123,7 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <button id="go" class="btn btn-primary">Πάτα το γλέντι!!!</button>
+                  <button id="go" class="btn btn-primary"> -- Πάτα το γλέντι!!! -- </button>
                 </div>
               </div>
             </div> <!--panel from-->      
@@ -166,7 +166,7 @@
                   <div class="form-group">
                     <label for="output-area" class="form-control-label">Αποτελέσματα:</label>
                     εδώ:<textarea id="output-area" class="form-control" rows="5"></textarea>
-                    <a href="https://www.google.gr/maps/@40.151,23.349,100m/data=!3m1!1e3"></a>
+                    <a href="https://www.google.gr/maps/@40.151,23.349,100m/data=!3m1!1e3">google maps link</a>
                   </div>
                 <div id="output-alert-area" class="form-group">
                 <!--generate alert based on the results-->
