--- a/transform/templates/transform/index.html
+++ b/transform/templates/transform/index.html
@@ -46,10 +46,10 @@
     
     <div class="container">
       <div class="page-header">
-        <h1>jojo<small>μτσχ 20200126-17.45</small></h1>
+        <h1>jojo<small>μτσχ 20200126-17.50</small></h1>
       </div>
 
-      {% regroup ref_systems|dictsortreversed:"datum" by datum as datums %}
+#jojo      {% regroup ref_systems|dictsortreversed:"datum" by datum as datums %}
     	<form id="form-params" class="form" role="form" method="post" action="{% url 'transform' %}">
         
         <div class="row">
