--- a/transform/templates/transform/index.html
+++ b/transform/templates/transform/index.html
@@ -46,7 +46,7 @@
     
     <div class="container">
       <div class="page-header">
-        <h1>jojo<small>μτσχ 20200126-18.36</small></h1>
+        <h1>jojo<small>μτσχ 20200126-18.45</small></h1>
       </div>
 
       {% regroup ref_systems|dictsortreversed:"datum" by datum as datums %}
@@ -166,7 +166,7 @@
                 <!--output data-->
                   <div class="form-group">
                     <label for="output-area" class="form-control-label">Αποτελέσματα:</label>
-                    εδώ1:<textarea id="output-area" class="form-control" rows="3" readonly></textarea>11
+                    #εδώ1:<textarea id="output-area" class="form-control" rows="3" readonly></textarea>11
                     εδώ2:<textarea id="output-area"></textarea>22
                     <a href="https://www.google.gr/maps/@40.151,23.349,100m/data=!3m1!1e3">google maps link</a>
                   </div>
