--- a/transform/templates/transform/index.html
+++ b/transform/templates/transform/index.html
@@ -46,7 +46,7 @@
     
     <div class="container">
       <div class="page-header">
-        <h1>jojo<small>μτσχ 20200126-18.50</small></h1>
+        <h1>jojo<small>μτσχ 20200126-18.55</small></h1>
       </div>
 
       {% regroup ref_systems|dictsortreversed:"datum" by datum as datums %}
@@ -166,9 +166,10 @@
                 <!--output data-->
                   <div class="form-group">
                     <label for="output-area" class="form-control-label">Αποτελέσματα:</label>
-                    εδώ1:<textarea id="output-area" rows="3" readonly autofocus disabled></textarea>11
-                    εδώ2:<textarea id="output-area" class="form-control"></textarea>22
-                    <a href="https://www.google.gr/maps/@40.151,23.349,100m/data=!3m1!1e3">google maps link</a>
+                     εδώ2:<textarea id="output-area" class="form-control" rows="2" readonly class="form-control-plaintext"></textarea>τελος τεστ
+              εδώ το καλο:<textarea id="output-area" class="form-control" rows="5" readonly autofocus disabled></textarea>νταξ
+                     τεστ2
+                     <a href="https://www.google.gr/maps/@40.151,23.349,100m/data=!3m1!1e3">google maps link</a>
                   </div>
                 <div id="output-alert-area" class="form-group">
                 <!--generate alert based on the results-->
