--- a/transform/templates/transform/index.html
+++ b/transform/templates/transform/index.html
@@ -46,7 +46,7 @@
     
     <div class="container">
       <div class="page-header">
-        <h1>jojo<small>μτσχ 20200126-18.55</small></h1>
+        <h1>jojo<small>μτσχ 20200126-19.00</small></h1>
       </div>
 
       {% regroup ref_systems|dictsortreversed:"datum" by datum as datums %}
@@ -88,7 +88,7 @@
                 <!--input data-->
                 <div class="form-group">
                   <label for="input-area" class="form-control-label">Δώσε data εδώ:</label>
-                  <textarea id="input-area" class="form-control" rows="5"></textarea>
+                  <textarea id="input-area" class="form-control" rows="5" value="444444,4444444"></textarea>
                 </div>
                 <!-- input data options-->
                 <div class="row form-group"> 
@@ -166,7 +166,7 @@
                 <!--output data-->
                   <div class="form-group">
                     <label for="output-area" class="form-control-label">Αποτελέσματα:</label>
-                     εδώ2:<textarea id="output-area" class="form-control" rows="2" readonly class="form-control-plaintext"></textarea>τελος τεστ
+ τεστ εδώ:<textarea id="output-area" class="form-control" rows="2" readonly class="form-control-plaintext"></textarea>τελος τεστ
               εδώ το καλο:<textarea id="output-area" class="form-control" rows="5" readonly autofocus disabled></textarea>νταξ
                      τεστ2
                      <a href="https://www.google.gr/maps/@40.151,23.349,100m/data=!3m1!1e3">google maps link</a>
