--- a/transform/templates/transform/index.html
+++ b/transform/templates/transform/index.html
@@ -46,7 +46,7 @@
     
     <div class="container">
       <div class="page-header">
-        <h1>jojo<small>μτσχ 20200126-19.31</small></h1>
+        <h1>jojo<small>μτσχ 20200126-19.32</small></h1>
       </div>
 
       {% regroup ref_systems|dictsortreversed:"datum" by datum as datums %}
@@ -166,7 +166,7 @@
                 <!--output data-->
                   <div class="form-group">
                     <label for="output-area" class="form-control-label">Αποτελέσματα:</label>
- τεστ εδώ:<textarea value="jojo" id="output-area" class="form-control" rows="2"></textarea>τελος τεστ
+ τεστ εδώ:<textarea value="jojo" id="output-area" class="form-control" rows="2">τελος τεστ</textarea><!--end test-->
               εδώ το καλο:<textarea id="output-area" class="form-control" rows="5" readonly autofocus disabled></textarea>νταξ
                      τεστ2
                      <a href="https://www.google.gr/maps/@40.151,23.349,100m/data=!3m1!1e3">google maps link</a>
@@ -182,11 +182,6 @@
 
       </form>
 
-    
-    
-    
-    
-    
     
     
       <hr>
