--- a/transform/templates/transform/index.html
+++ b/transform/templates/transform/index.html
@@ -46,7 +46,7 @@
     
     <div class="container">
       <div class="page-header">
-        <h1>jojo<small>μτσχ 20200126-19.35</small></h1>
+        <h1>jojo<small>μτσχ 20200126-19.40</small></h1>
       </div>
 
       {% regroup ref_systems|dictsortreversed:"datum" by datum as datums %}
@@ -166,7 +166,14 @@
                 <!--output data-->
                   <div class="form-group">
                     <label for="output-area" class="form-control-label">Αποτελέσματα:</label>
-                      <div id="output-area"><!--end test-->
+                      <div id="output-area"><!--end test--></div>
+                      $("#mytextArea").on("mouseup", function(eventData) {
+    var lineHeight = $(this).css("line-height");
+    lineHeight = parseInt(lineHeight.substring(0, lineHeight.length - 2));
+
+    var line = Math.floor(eventData.offsetY / lineHeight);
+    alert($(this).val().split("\n")[line]);
+});
  τεστ εδώ:<textarea value="jojo" id="output-area" class="form-control" rows="2">here the results</textarea><!--end test-->
               εδώ το καλο:<textarea id="output-area" class="form-control" rows="5" readonly autofocus disabled></textarea>νταξ
                      τεστ2
