--- a/transform/templates/transform/index.html
+++ b/transform/templates/transform/index.html
@@ -46,7 +46,7 @@
     
     <div class="container">
       <div class="page-header">
-        <h1>jojo<small>μτσχ 20200126-19.40</small></h1>
+        <h1>jojo<small>μτσχ 20200126-19.45</small></h1>
       </div>
 
       {% regroup ref_systems|dictsortreversed:"datum" by datum as datums %}
@@ -88,7 +88,7 @@
                 <!--input data-->
                 <div class="form-group">
                   <label for="input-area" class="form-control-label">Δώσε data εδώ:</label>
-                  <textarea id="input-area" class="form-control" rows="5">444444,4444444</textarea>
+                  <textarea id="input-area" class="form-control" rows="5"></textarea>
                 </div>
                 <!-- input data options-->
                 <div class="row form-group"> 
@@ -167,13 +167,13 @@
                   <div class="form-group">
                     <label for="output-area" class="form-control-label">Αποτελέσματα:</label>
                       <div id="output-area"><!--end test--></div>
-                      $("#mytextArea").on("mouseup", function(eventData) {
-    var lineHeight = $(this).css("line-height");
-    lineHeight = parseInt(lineHeight.substring(0, lineHeight.length - 2));
+                        $("#mytextArea").on("mouseup", function(eventData) {
+                        var lineHeight = $(this).css("line-height");
+                        lineHeight = parseInt(lineHeight.substring(0, lineHeight.length - 2));
 
-    var line = Math.floor(eventData.offsetY / lineHeight);
-    alert($(this).val().split("\n")[line]);
-});
+                        var line = Math.floor(eventData.offsetY / lineHeight);
+                        alert($(this).val().split("\n")[line]);
+                        });
  τεστ εδώ:<textarea value="jojo" id="output-area" class="form-control" rows="2">here the results</textarea><!--end test-->
               εδώ το καλο:<textarea id="output-area" class="form-control" rows="5" readonly autofocus disabled></textarea>νταξ
                      τεστ2
