--- a/transform/templates/transform/index.html
+++ b/transform/templates/transform/index.html
@@ -46,7 +46,7 @@
     
     <div class="container">
       <div class="page-header">
-        <h1>jojo<small>μτσχ 20200126-19.53</small></h1>
+        <h1>jojo<small>μτσχ 20200129-18.45</small></h1>
       </div>
 
       {% regroup ref_systems|dictsortreversed:"datum" by datum as datums %}
@@ -167,6 +167,13 @@
                   <div class="form-group">
                     <label for="output-area" class="form-control-label">Αποτελέσματα:</label>
                      <textarea id="output-area" class="form-control" rows="5" readonly autofocus disabled>αλλάζει</textarea>
+                      <div class="tooltip">
+                      <button onclick="myFunction()" onmouseout="outFunc()">
+                      <span class="tooltiptext" id="myTooltip">Copy to clipboard</span>
+                      Copy text
+                      </button>
+                      </div>
+                      
                      <a href="https://www.google.gr/maps/@40.151,23.349,100m/data=!3m1!1e3">google maps link</a>
                   </div>
                 <div id="output-alert-area" class="form-group">
@@ -180,6 +187,22 @@
 
       </form>
 
+<script>
+function myFunction() {
+  var copyText = document.getElementById("output-area");
+  copyText.select();
+  copyText.setSelectionRange(0, 99999);
+  document.execCommand("copy");
+  
+  var tooltip = document.getElementById("myTooltip");
+  tooltip.innerHTML = "Copied: " + copyText.value;
+}
+
+function outFunc() {
+  var tooltip = document.getElementById("myTooltip");
+  tooltip.innerHTML = "Copy to clipboard";
+}
+</script>
     
     
       <hr>
