--- a/transform/templates/transform/index.html
+++ b/transform/templates/transform/index.html
@@ -46,7 +46,7 @@
     
     <div class="container">
       <div class="page-header">
-        <h1>jojo<small>μτσχ 20200201-19.25</small></h1>
+        <h1>jojo<small>μτσχ 20200201-19.30</small></h1>
       </div>
 
       {% regroup ref_systems|dictsortreversed:"datum" by datum as datums %}
@@ -167,13 +167,12 @@
                   <div class="form-group">
                     <label for="output-area" class="form-control-label">Αποτελέσματα:</label>
                      <textarea id="output-area" class="form-control" rows="5">readonly autofocus disabled</textarea>
-11
 <div class="jjtooltip">
 <button onclick="jojoFunction()" onmouseout="outFunc()">
 <span class="jjjtooltiptext" id="jojoTooltip">put mouse here to copy</span> here!
 </button>
 </div>
-12
+
 <script>
   function jojoFunction() 
     {
@@ -181,6 +180,9 @@
      copyText.select();
      copyText.setSelectionRange(0, 99999);
      document.execCommand("copy");
+     
+     var jjtooltip = document.getElementById("jojoTooltip");
+     jjtooltip.innerHTML = "Copied: " + copyText.value;
     }
 
 function outFunc() 
@@ -189,8 +191,7 @@ function outFunc()
       jjtooltip.innerHTML = "Click now";
     }
 </script>
-13
-14                      
+                     
                       <a href="https://www.google.gr/maps/@40.151,23.349,100m/data=!3m1!1e3">google maps link</a>
                   </div>
                 <div id="output-alert-area" class="form-group">
