--- a/transform/templates/transform/index.html
+++ b/transform/templates/transform/index.html
@@ -1,5 +1,5 @@
 ﻿{% load static %}
-
+jojo 20200201
 <!DOCTYPE HTML>
 <html lang="el-GR">
 <head>
@@ -166,10 +166,10 @@
                 <!--output data-->
                   <div class="form-group">
                     <label for="output-area" class="form-control-label">Αποτελέσματα:</label>
-                     <textarea id="output-area" class="form-control" rows="5">readonly autofocus disabled</textarea>
+                     <textarea id="output-area" class="form-control" rows="5" readonly autofocus disabled>waiting..</textarea>
 <div class="jjtooltip">
 <button onclick="jojoFunction()" onmouseout="outFunc()">
-<span class="jjjtooltiptext" id="jojoTooltip">put mouse here to copy</span> here!
+<span class="jjjtooltiptext" id="jojoTooltip">put mouse here to copy</span> ok!!
 </button>
 </div>
 
@@ -192,7 +192,7 @@ function outFunc()
     }
 </script>
                      
-                      <a href="https://www.google.gr/maps/@40.151,23.349,100m/data=!3m1!1e3">google maps link</a>
+                      <br><a href="https://www.google.gr/maps/@40.151,23.349,100m/data=!3m1!1e3">google maps link</a>
                   </div>
                 <div id="output-alert-area" class="form-group">
                 <!--generate alert based on the results-->
