--- a/transform/templates/transform/index.html
+++ b/transform/templates/transform/index.html
@@ -1,5 +1,5 @@
 ﻿{% load static %}
-jojo 20200201 19.47
+jojo 20200201 19.49
 <!DOCTYPE HTML>
 <html lang="el-GR">
 <head>
@@ -166,7 +166,7 @@ jojo 20200201 19.47
                 <!--output data-->
                   <div class="form-group">
                     <label for="output-area" class="form-control-label">Αποτελέσματα:</label>
-                     <textarea id="output-area" class="form-control" rows="5" readony autofocus> disabled waiting..</textarea>
+                     <textarea id="output-area" class="form-control" rows="5" readony autofocus>waiting..</textarea>
 <div class="jjtooltip">
 <button onclick="jojoFunction()" onmouseout="outFunc()">
 <span class="jjjtooltiptext" id="jojoTooltip">put mouse HERE to copy</span> ok
